# MLPMixer

./: README.md  pyproject.toml
src/: data.py  main.py  model.py
