[tool.poetry]
name = "mlpmixer"
version = "0.1.0"
description = ""
authors = ["Liam Eloie"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
pytorch-lightning = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
